[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
futures = "0.1"
serde_json = "1.0"
image = "0.24.5"
rayon = "1.6.0"
rand = "0.8.5"
rand_distr = "0.4.3"
clap = { version = "4.0.29", features = ["derive"] }
chumsky = "0.9.3"
